@@ -11,8 +11,10 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.util.ResourceUtils;
+import org.springframework.web.socket.CloseStatus;
 import org.springframework.web.socket.TextMessage;
 import org.springframework.web.socket.WebSocketSession;
+import org.springframework.web.socket.handler.ConcurrentWebSocketSessionDecorator;
 
 import java.io.File;
 import java.io.IOException;
@@ -29,14 +31,21 @@ public class BroadcastService {
     ObjectMapper mapper;
     @Autowired
     OllamaClient client;
-    private final ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
+//    private final ExecutorService executorService = ForkJoinPool.commonPool();
+    private final ExecutorService executorService = Executors.newFixedThreadPool(10);
+//    private final ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
+//    private final ExecutorService executorService = Executors.newWorkStealingPool();
     private final List<WebSocketSession> allSessions = new CopyOnWriteArrayList<>();
     private final BackpressureSamplingService samplingService;
     private final String prompt;
+    private final boolean ollamaEnabled;
 
     public BroadcastService(BackpressureSamplingService samplingService,
-                            @Value("${ollama.prompt.file}") String promptPath) throws IOException {
+                            @Value("${ollama.prompt.file}") String promptPath,
+                            @Value("${ollama.enabled}") boolean ollamaEnabled
+                            ) throws IOException {
         this.samplingService = samplingService;
+        this.ollamaEnabled = ollamaEnabled;
         this.prompt = Files.readString(ResourceUtils.getFile(promptPath).toPath());
         log.info("using prompt path: {}, content: {}", promptPath, prompt);
     }
@@ -77,21 +86,23 @@ public class BroadcastService {
         }
 
         var id = (UUID) senderSession.getAttributes().get("id");
-        samplingService.sample(id, () -> {
-            String base64 = contribution.videoStream().substring(contribution.videoStream().lastIndexOf(",") + 1);
-            String answer = client.ask(prompt,
-                    base64);
+        if (ollamaEnabled) {
+            samplingService.sample(id, () -> {
+                String base64 = contribution.videoStream().substring(contribution.videoStream().lastIndexOf(",") + 1);
+                String answer = client.ask(prompt,
+                        base64);
 
-            log.info("Got answer: {}", answer);
-            Messages.VideoFeedbackMessage update = new Messages.VideoFeedbackMessage(
-                    (String) senderSession.getAttributes().get("username"),
-                    answer
-            );
-            byte[] payload = toStringValue(update);
-            TextMessage message = new TextMessage(payload);
-            sendAll(message)
-                    .join();
-        });
+                log.info("Got answer: {}", answer);
+                Messages.VideoFeedbackMessage update = new Messages.VideoFeedbackMessage(
+                        (String) senderSession.getAttributes().get("username"),
+                        answer
+                );
+                byte[] payload = toStringValue(update);
+                TextMessage message = new TextMessage(payload);
+                sendAll(message)
+                        .join();
+            });
+        }
 
         Messages.VideoMessage update = new Messages.VideoMessage(
                 (String) senderSession.getAttributes().get("username"),
@@ -106,20 +117,58 @@ public class BroadcastService {
         return sendAll(message, null);
     }
     private CompletableFuture sendAll(TextMessage message, WebSocketSession senderSessionToSkip) {
+//        TODO send sequentially
+//        allSessions.forEach(session -> {
+//                    try {
+//                        if ( senderSessionToSkip == null || !senderSessionToSkip.equals(session)) {
+//                            session.sendMessage(message);
+//                        }
+//                    } catch (IOException e) {
+//                        log.warn("send - error", e);
+//                        // TODO remove session from list
+//                    }
+//                }
+//        );
+//        return CompletableFuture.allOf();
+//        TODO try in parallel OOM killed after 10 rate with 10 instances
         List<? extends Future<?>> all = allSessions.stream().map(session ->
                 senderSessionToSkip != null && senderSessionToSkip.equals(session) ? CompletableFuture.completedFuture(senderSessionToSkip) :
-                        CompletableFuture.supplyAsync(() -> {
+                        executorService.submit(() -> {
                             try {
                                 session.sendMessage(message);
                                 return session;
                             } catch (IOException e) {
                                 log.warn("send - error", e);
                                 // TODO remove session from list
+                                try {
+                                    session.close(CloseStatus.SERVER_ERROR);
+                                } catch (IOException ex) {
+                                    log.warn("can't close session: {}", session, ex);
+                                }
+                                unregisterSession(session);
                                 return session;
                             }
-                        }, executorService)
+                        })
+//                CompletableFuture.supplyAsync(() -> {
+//                            try {
+////                                log.info("sendAll broadcast to: {}", session.getId());
+//                                session.sendMessage(message);
+//                                return session;
+//                            } catch (IOException e) {
+//                                log.warn("send - error", e);
+//                                // TODO remove session from list
+//                                try {
+//                                    session.close(CloseStatus.SERVER_ERROR);
+//                                } catch (IOException ex) {
+//                                    log.warn("can't close session: {}", session, ex);
+//                                }
+//                                unregisterSession(session);
+//                                return session;
+//                            }
+//                        }, executorService)
         ).toList();
-        return CompletableFuture.allOf(all.toArray(new CompletableFuture[]{}));
+        return CompletableFuture.allOf();
+//        return CompletableFuture.allOf(all.toArray(new CompletableFuture[]{}));// TODO OOM
     }
 
 
